--- a/1.md
+++ b/1.md
@@ -11,7 +11,7 @@ Duration: 10 mins
 <img src="https://spektrasystems.com/wp-content/uploads/2021/02/20748047_909553532535214_5011335614256117284_o-1024x768-2-600x600.jpg" width = "500" height ="500">
 
 INJECT KEY - CLICK TO PASTE TEST
-<inject key="Tenant Domain Name" enableClicktoPaste="true" /> enableClicktoPaste="true"
+<inject key="Tenant Domain Name" enableClicktoPaste="true" /> 
 ## Overview 
 
 **Verifying Static Value and key :**
