--- a/1.md
+++ b/1.md
@@ -25,7 +25,7 @@ INJECT KEY - CLICK TO PASTE TEST
 Enable Copy - True -----------------
 
 * **checkNNumber:** <inject key="AzureAdUserEmail" value="StaticValue2" key="AzureAdUserPassword" value="StaticValue1" 
-    enableCopy="true" />
+     enableClicktoPaste="true" />
 
 
 Enable Copy - False -----------------
