--- a/1.md
+++ b/1.md
@@ -610,3 +610,4 @@ https://media1.tenor.com/m/5L12vz4KkikAAAAC/really-jack-in-the-box.gif
 Video - https://www.google.com/search?sca_esv=017810d95fc5d12f&q=Azure+shot+video&udm=39&fbs=ABzOT_CWdhQLP1FcmU5B0fn3xuWp6IcynRBrzjy_vjxR0KoDMnbkfvm4jW0eza52i_Pv0GH8kQLzw_tSVhAdOi8ZE2uVKxEWinLVZBoDQNS_-Xzyw5WLP046iuErMk9lQ4YSZ9xeQ5Ui5qww6OYd1XDUBV4wQpTpaOCx5EVXuKYUhqLV7Z6Z7Hf3D1q8l_D3J3BNusnpToxWYEDvX4LjBcYoAFWUJduMMQ&sa=X&ved=2ahUKEwiTobSHv_KMAxUk2TgGHRFVIZMQs6gLegQIGRAB&biw=1272&bih=602&dpr=1.5
 
 <inject key="keyname" value="-Dashboard" cloudname="Microsoft Azure" enableCopy="true" enableClickToPaste="false" defaultValue="old-user-123" />
+![image](https://github.com/user-attachments/assets/7b44ea48-4e41-458c-bf0e-139068cb4b99)
