--- a/1.md
+++ b/1.md
@@ -616,3 +616,8 @@ Video - https://www.google.com/search?sca_esv=017810d95fc5d12f&q=Azure+shot+vide
 PNG image 
  
 ![image](https://github.com/user-attachments/assets/77088ac2-86be-4ccf-bc52-f0a40b14add2)
+
+
+
+
+---------O5Sept--------
