--- a/1.md
+++ b/1.md
@@ -621,3 +621,7 @@ PNG image
 
 
 ---------O5Sept--------
+
+Valid Inject Key without default value Anupam
+<inject key="AzureAdUserEmail" defaultvalue="">
+
