--- a/1.md
+++ b/1.md
@@ -625,3 +625,6 @@ PNG image
 Valid Inject Key without default value Anupam
 <inject key="AzureAdUserEmail" defaultvalue="">
 
+Valid Key with any value
+<inject key="AzureAdUserEmail" defaultvalue="anupammmm">
+
