--- a/1.md
+++ b/1.md
@@ -628,10 +628,10 @@ Valid Inject Key without default value Anupam
 
 
 Invalid Key with any value
-<inject key="AzureAdUserEmail" defaultvalue="anupammmm">
+<inject key="invalieAzureAdUserEmail" defaultvalue="anupammmm">
 `````
 
 Invalid Key with no Value any value
-<inject key="AzureAdUserEmail" defaultvalue="">
+<inject key="invalidAzureAdUserEmail" defaultvalue="">
 ``````
 
