--- a/1.md
+++ b/1.md
@@ -633,5 +633,21 @@ Invalid Key with any value
 
 Invalid Key with no Value any value
 <inject key="invalidAzureAdUserEmail" defaultvalue="">
+
+```
+No key and No Value
+Invalid Key with no Value any value
+<inject key="" defaultvalue="">
+
+```
+Inject key of Number and Special character
+
+<inject key="@@@@@" defaultvalue="">
 ``````
+<inject key="123456" defaultvalue="">
+
+Normal Test in Lab Guide
+RCB will won the cup
+
+
 
