--- a/1.md
+++ b/1.md
@@ -643,8 +643,10 @@ Invalid Key with no Value any value
 Inject key of Number and Special character
 
 <inject key="@@@@@" defaultvalue="">
+<inject key="@@@@@" defaultvalue="name">
 ``````
 <inject key="123456" defaultvalue="">
+<inject key="123456" defaultvalue="count">
 
 Normal Test in Lab Guide
 RCB will won the cup
