--- a/1.md
+++ b/1.md
@@ -631,7 +631,7 @@ Invalid Key with any value
 <inject key="invalieAzureAdUserEmail" defaultvalue="anupammmm">
 `````
 
-Invalid Key with no Value any value
+Invalid Key with no any value
 <inject key="invalidAzureAdUserEmail" defaultvalue="">
 
 ```
@@ -650,6 +650,27 @@ Inject key of Number and Special character
 
 Normal Test in Lab Guide
 RCB will won the cup
+
+
+
+----------------New----------------------------
+**Verifying Static Value and key :**
+Invalid  Key and Value
+* **checkNNumber:** <inject key="testKey2" value="StaticValue2"  />
+
+Valid key Password and random value
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" />
+
+Valid key Password and random value
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="example@example.com" />
+
+Valid key Email and random Value 
+* **checkNNumber:** <inject key="AzureAdUserEmail" value="example@example.com" />
+
+Valid Key and null value
+* **checkNNumber:** <inject key="AzureAdUserEmail" value="" />
+
+
 
 
 
