--- a/1.md
+++ b/1.md
@@ -654,21 +654,21 @@ RCB will won the cup
 
 
 ----------------New----------------------------
-**Verifying Static Value and key :**
+
 Invalid  Key and Value
-* **checkNNumber:** <inject key="testKey2" value="StaticValue2"  />
+ <inject key="testKey2" value="StaticValue2"  />
 
 Valid key Password and random value
-* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" />
+<inject key="AzureAdUserPassword" value="StaticValue3" />
 
 Valid key Password and random value
-* **checkNNumber:** <inject key="AzureAdUserPassword" value="example@example.com" />
+ <inject key="AzureAdUserPassword" value="example@example.com" />
 
 Valid key Email and random Value 
-* **checkNNumber:** <inject key="AzureAdUserEmail" value="example@example.com" />
+<inject key="AzureAdUserEmail" value="example@example.com" />
 
 Valid Key and null value
-* **checkNNumber:** <inject key="AzureAdUserEmail" value="" />
+ <inject key="AzureAdUserEmail" value="" />
 
 
 
