--- a/1.md
+++ b/1.md
@@ -655,20 +655,26 @@ RCB will won the cup
 
 ----------------New----------------------------
 
-Invalid  Key and Value
- <inject key="testKey2" value="StaticValue2"  />
+Invalid  Key and Invalid / random Value 
+ <inject key="testKey2" value="random vaue"  />
+ `
+ Invalid  Key and no Value
+ <inject key="testKey2" value=""  />
 
 Valid key Password and random value
-<inject key="AzureAdUserPassword" value="StaticValue3" />
+<inject key="AzureAdUserPassword" value="anupam" />
 
-Valid key Password and random value
- <inject key="AzureAdUserPassword" value="example@example.com" />
+Valid key Password and no value
+ <inject key="AzureAdUserPassword" value="" />
 
 Valid key Email and random Value 
 <inject key="AzureAdUserEmail" value="example@example.com" />
 
-Valid Key and null value
+Valid Key for username
  <inject key="AzureAdUserEmail" value="" />
+
+ Valid key for Password
+ <inject key="AzureAdUserPassword" value="" />
 
 
 
