--- a/1.md
+++ b/1.md
@@ -677,6 +677,45 @@ Valid Key for username
  <inject key="AzureAdUserPassword" value="" />
 
 
+Colour
+
+<span style="color: green"> Friday</span>
+<span style="color: Blue"> tes </span>
+<span style="color: Yellow"> on </span>
+<span style="color: Pink"> without </span>
+<span style="color: black"> 27 December</span>
+<span style="color: red"> last month of 2024</span>
+<span p="color: red"> last month of 2024</span>
+
+Image
+
+> ![image](https://github.com/user-attachments/assets/942a454c-99e9-4d51-937e-be3d0a0314fd)
 
 
 
+>   ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
+>https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExeDFwNGY1eDdwMDJlOGp3bXZhNHg2cjFoejl2ZXhnZTBkdW40aDRlMiZlcD12MV9naWZzX3RyZW5kaW5nJmN0PWc/fUQ4rhUZJYiQsas6WD/200.webp
+
+![image](https://github.com/user-attachments/assets/4b7c5ae1-c4eb-4442-bdc0-3a2ffad3aa7a)
+
+![image](https://github.com/user-attachments/assets/3f93291b-b35a-4078-9d98-e2be26097c98)
+
+![image](https://github.com/user-attachments/assets/7b44ea48-4e41-458c-bf0e-139068cb4b99)
+
+Text format
+**Bold**_
+itali55
+*italic*
+**bold**
+
+
+Adding Emoji
+🧆
+🍱
+🍜
+
+
+Adding gif
+https://media1.tenor.com/m/OTtSnexFUcwAAAAC/junk-food-unhealthy.gif
+
+https://media1.tenor.com/m/waC6qhecVNAAAAAd/jack-in-the-box-fast-food.gif
