--- a/1.md
+++ b/1.md
@@ -719,3 +719,8 @@ Adding gif
 https://media1.tenor.com/m/OTtSnexFUcwAAAAC/junk-food-unhealthy.gif
 
 https://media1.tenor.com/m/waC6qhecVNAAAAAd/jack-in-the-box-fast-food.gif
+
+
+------PCS Inject Key test ----------
+<inject key="AzureAdUserPassword" defaultvalue="example@example.com">
+
