--- a/1.md
+++ b/1.md
@@ -722,5 +722,11 @@ https://media1.tenor.com/m/waC6qhecVNAAAAAd/jack-in-the-box-fast-food.gif
 
 
 ------PCS Inject Key test ----------
+```
+Valid key and Valid value
 <inject key="AzureAdUserPassword" defaultvalue="example@example.com">
+```
+Valid Key and Invalid value
+<inject key="AzureAdUserPassword" defaultvalue="example@examplem">
+```
 
