--- a/1.md
+++ b/1.md
@@ -724,9 +724,17 @@ https://media1.tenor.com/m/waC6qhecVNAAAAAd/jack-in-the-box-fast-food.gif
 ------PCS Inject Key test ----------
 ```
 Valid key and Valid value
-<inject key="AzureAdUserPassword" defaultvalue="example@example.com">
+AzureAdUserPassword : <inject key="AzureAdUserPassword" defaultvalue="example@example.com">
+```
 ```
 Valid Key and Invalid value
-<inject key="AzureAdUserPassword" defaultvalue="example@examplem">
+AzureAdUserPassword : <inject key="AzureAdUserPassword" defaultvalue="example@examplem">
 ```
-
+```
+Valid Key and Null
+AzureAdUserPassword : <inject key="AzureAdUserPassword" value=" ">
+```
+```
+InValid Key and Valid Value
+AzureAdUserPassword : <inject key="AzureAdUserPassword" value="QA@test.com">
+```
