--- a/1.md
+++ b/1.md
@@ -724,7 +724,7 @@ https://media1.tenor.com/m/waC6qhecVNAAAAAd/jack-in-the-box-fast-food.gif
 ------PCS Inject Key test ----------
 Valid key and Valid value
 ```
-AzureAdUserPassword : <inject key="AzureAdUserPassword" defaultvalue="example@example.com" enableCopy="true" enableClickToPaste="false" >
+AzureAdUserPassword : <inject key="AzureAdUserPassword" defaultvalue="example@example.com" enableCopy="false" enableClickToPaste="true" >
 ```
 Valid Key and Invalid value
 ```
@@ -743,4 +743,5 @@ AzureAdUserPassword : <inject key="AzureAdUserPassword21" value="">
 ```
 Inject key with paragraph
 ```
-<inject key=" " value="long paragraph test long paragraph testlong paragraph testlong paragraph test long paragraph test long paragraph test long paragraph test "
+<inject key=" " value="long paragraph test long paragraph testlong paragraph testlong paragraph test long paragraph test long paragraph test long paragraph test ">
+```
