--- a/1.md
+++ b/1.md
@@ -724,7 +724,7 @@ https://media1.tenor.com/m/waC6qhecVNAAAAAd/jack-in-the-box-fast-food.gif
 ------PCS Inject Key test ----------
 Valid key and Valid value
 ```
-AzureAdUserPassword : <inject key="AzureAdUserPassword" defaultvalue="example@example.com" enableCopy="false" enableClickToPaste="true" >
+AzureAdUserPassword : <inject key="AzureAdUserPassword" defaultvalue="example@example.com" enableCopy="false">
 ```
 Valid Key and Invalid value
 ```
