--- a/1.md
+++ b/1.md
@@ -745,3 +745,37 @@ Inject key with paragraph
 ```
 <inject key=" " value="long paragraph test long paragraph testlong paragraph testlong paragraph test long paragraph test long paragraph test long paragraph test ">
 ```
+
+**OutputParams and Inject Keys check Priya**
+Valid Key and Value
+```
+<inject key="AzureAdUserPassword" defaultvalue="example@example.com">
+<inject key="AzureAdUserEmail" defaultvalue="">
+<inject key="" defaultvalue="sample@123.com">
+<inject key="AzureAdUserPassword" defaultvalue="uodq56AEV*17" >
+```
+```
+<inject key="AzureAdUserPassword1" defaultvalue="checking paragraph for default value"  style="color: yellow">
+```
+
+Valid Key and no value
+```
+<inject key="azureemailid" defaultvalue="">
+```
+No Key and Valid Value
+```
+<inject key="" defaultvalue="Labvm Admin Password" enableCopy="false"/>
+```
+No key and No Value
+```
+<inject key="" defaultvalue="">
+```
+Invalid Key and Valid value
+```
+<inject key="azureemail" enableCopy="false" defaultvalue="example@example.com">
+```
+>AzureAdUserEmail :** <inject style="color: Red" key="AzureAdUserEmail"/>**
+>AzureAdUserPassword :** <inject enableCopy="false" key="AzureAdUserPassword"/>**
+
+**Test Links and Hyperlinks**
+[Link Text](https://example.com/)<img width="1052" height="887" alt="image" src="https://github.com/user-attachments/assets/059778fc-160a-43e4-ac6e-203ad9fbdf96" />
