--- a/1.md
+++ b/1.md
@@ -719,7 +719,7 @@ Adding gif
 https://media1.tenor.com/m/OTtSnexFUcwAAAAC/junk-food-unhealthy.gif
 
 https://media1.tenor.com/m/waC6qhecVNAAAAAd/jack-in-the-box-fast-food.gif
------- Ankush -----------
+------ Ankush Changes -----------
 <span style="color: green"> tuesday </span>
 <span style="color: Blue"> 29th jan </span>
 <span style="color: Yellow"> 7:50 pm </span>
