--- a/1.md
+++ b/1.md
@@ -726,6 +726,9 @@ https://media1.tenor.com/m/waC6qhecVNAAAAAd/jack-in-the-box-fast-food.gif
 <span style="color: Pink"> divyashree cr </span>
 <span style="color: black"> spektra systems </span>
 <span style="color: red"> first month of 2025 </span>
+No key and No Value
+Invalid Key with no Value any value
+<inject key="" defaultvalue="">
 Adding gif
 https://media1.tenor.com/m/OTtSnexFUcwAAAAC/junk-food-unhealthy.gif
 
