--- a/1.md
+++ b/1.md
@@ -854,7 +854,7 @@ https://www.google.com/
 <span style="color: Pink"> divyashree cr </span>
 <span style="color: black"> spektra systems </span>
 <span style="color: red"> first month of 2025 </span> 
-
+ <inject key="AzureAdUserEmail" value="" />
 
 
 check 26th nov
