--- a/1.md
+++ b/1.md
@@ -864,4 +864,4 @@ vhr completed
 GIF image 
  
 ![image](https://github.com/user-attachments/assets/5e353c89-ab10-4c74-96be-709fff5846a5)
-
+<inject key="Checking Email ID" value="xyz@gmail.com" />
