--- a/1.md
+++ b/1.md
@@ -865,6 +865,4 @@ vhr completed
 GIF image 
  
 ![image](https://github.com/user-attachments/assets/5e353c89-ab10-4c74-96be-709fff5846a5)
-<inject key="AzureAdUserEmail" value="xyz@gmail.com" />
-<inject key="AzureAdUserEmail" value="xyabc@gmail.com" />
-<inject key="AzureAdUserEmail" value="xyz123@gmail.com" />
+<span style="color: red">* **checkNNumber:** <inject key="Inv" value="userId" /> </span>
