--- a/2.md
+++ b/2.md
@@ -44,6 +44,9 @@ Nested List: </br>
    -Nested item 1
     -Nested item 2
 
+**bold text**</br>
+_ Italic_</br>
+
 > [!NOTE]
 > Useful information that users should know, even when skimming content.
 
