--- a/1.md
+++ b/1.md
@@ -858,7 +858,7 @@ https://www.google.com/
 
 check 26th nov
 Color Your Eye Test
-vhr completed
+vhr completed</br>
 ______________Bhavani's area______________
 <h1> Image with link </h1>
 <img src="https://spektrasystems.com/wp-content/uploads/2021/02/20748047_909553532535214_5011335614256117284_o-1024x768-2-600x600.jpg" width = "500" height ="500"></br>
