--- a/1.md
+++ b/1.md
@@ -859,17 +859,19 @@ https://www.google.com/
 check 26th nov
 Color Your Eye Test
 vhr completed</br>
+
+``````````````````````````````````````````````````````````````````````````````````````````````````````````````
 ______________Bhavani's area______________</br>
 <h1> Image with link </h1>
 <img src="https://spektrasystems.com/wp-content/uploads/2021/02/20748047_909553532535214_5011335614256117284_o-1024x768-2-600x600.jpg" width = "500" height ="500"></br>
-<span style="color: green"> Friday </span>
-<span style="color: Blue"> 05th Dec </span>
-<span style="color: Yellow"> 11:27 pm </span>
-<span style="color: Pink"> Bhavani V </span>
-<span style="color: black"> spektra systems </span>
-<span style="color: red"> Last month of 2025 </span>
+<span style="color: green"> Friday </span></br>
+<span style="color: Blue"> 05th Dec </span></br>
+<span style="color: Yellow"> 11:27 pm </span></br>
+<span style="color: Pink"> Bhavani V </span></br>
+<span style="color: black"> spektra systems </span></br>
+<span style="color: red"> Last month of 2025 </span></br>
 **INJECT KEY - CLICK TO PASTE TEST**</br>
-<inject key="Tenant Domain Name" enableClicktoPaste="false" /> 
+<inject key="Tenant Domain Name" enableClicktoPaste="false" /> </br>
 
 
 GIF image 
