--- a/1.md
+++ b/1.md
@@ -870,8 +870,8 @@ ______________Bhavani's area______________</br>
 <span style="color: black"> spektra systems </span></br>
 <span style="color: red"> Last month of 2025 </span></br>
 **INJECT KEY - CLICK TO PASTE TEST**</br>
-<inject key="Tenant Domain Name" enableClicktoPaste="false" /> </br>
-
+<inject key="Tenant Domain Name" enableClicktoPaste="false" enablecopy="false" /> </br>
+<inject key="keyname" value="-Dashboard" cloudname="Microsoft Azure" enableCopy="false" enableClickToPaste="true" defaultValue="Bhavani-498" /></br>
 
 GIF image 
  
