--- a/1.md
+++ b/1.md
@@ -865,9 +865,9 @@ vhr completed</br>
 <p style="color: green"> Friday </p>
 <p style="color: Blue"> 05th Dec </p>
 <p style="color: Yellow"> 11:27 pm </p>
-<span style="color: Pink"> Bhavani V </span>
-<span style="color: black"> spektra systems </span>
-<span style="color: red"> Last month of 2025 </span>
+<p style="color: Pink"> Bhavani V </p>
+<span style="color: black"> spektra systems </span></br>
+<span style="color: red"> Last month of 2025 </span></br>
 
 ```
 code bock ckeck-VB0512
