--- a/1.md
+++ b/1.md
@@ -868,10 +868,10 @@ vhr completed</br>
 <p style="color: Pink"> Bhavani V </p>
 <span style="color: black"> spektra systems </span></br>
 <span style="color: red"> Last month of 2025 </span></br>
-Adding Emoji
-🧆
-🍱
-🍜
+-----Adding Emoji------
+🧆</br>
+🍱</br>
+🍜</br>
 ```
 code bock ckeck-VB0512
 ```
