--- a/1.md
+++ b/1.md
@@ -881,3 +881,70 @@ code bock ckeck-VB0512
 GIF image 
  
 ![image](https://github.com/user-attachments/assets/5e353c89-ab10-4c74-96be-709fff5846a5)
+
+
+
+![image](https://github.com/user-attachments/assets/77088ac2-86be-4ccf-bc52-f0a40b14add2)
+<inject key="" defaultvalue="">
+<span style="color: Blue"> tes </span>
+
+Invalid  Key and Invalid / random Value 
+ <inject key="testKey2" value="random vaue"  />
+ ```
+ Invalid  Key and no Value
+ <inject key="testKey2" value=""  />
+```
+Valid key Password and random value
+<inject key="AzureAdUserPassword" value="anupam" />
+```
+Valid key Password and no value
+ <inject key="AzureAdUserPassword" value="" />
+```
+Valid key Email and random Value 
+<inject key="AzureAdUserEmail" value="example@example.com" />
+```
+Valid Key for username
+ <inject key="AzureAdUserEmail" value="" />
+```
+ Valid key for Password
+ <inject key="AzureAdUserPassword" value="" />
+
+<inject key="@@@@@" defaultvalue="">
+<inject key="@@@@@" defaultvalue="name">
+``````
+<inject key="123456" defaultvalue="">
+<inject key="123456" defaultvalue="count">
+
+Different format of Text
+
+**Bold**
+
+_Italic_
+
+**Verifying Static Value and key :**
+
+* **checkNNumber:** <inject key="testKey2" value="StaticValue2"  />
+
+ **checkNNumber:** <inject key="testKey2" value="StaticValue2" />
+
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" />
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="example@example.com" />
+* **checkNNumber:** <inject key="AzureAdUserEmail" value="example@example.com" />
+* **checkNNumber:** <inject key="AzureAdUserEmail" value="random@gmail.com" />
+* **checkNNumber:** <inject key="AzureAdUserEmail" value="" />
+<span style="color: green">* **checkNNumber:** <inject key="Inv" value="lid" /> </span>
+
+* **checkNNumber:** <inject key="invalid" value="example@example.com" />
+
+https://www.google.com/ 
+<span style="color: green"> tuesday </span>
+<span style="color: Blue"> 29th jan </span>
+<span style="color: Yellow"> 7:50 pm </span>
+<span style="color: Pink"> divyashree cr </span>
+<span style="color: black"> spektra systems </span>
+<span style="color: red"> first month of 2025 </span> 
+ <inject key="AzureAdUserEmail" value="" />
+
+check 26th nov
+Color Your Eye Test
+vhr completed</br>
