--- a/1.md
+++ b/1.md
@@ -948,7 +948,7 @@ https://www.google.com/
 <span style="color: green"> tuesday </span>
 <span style="color: Blue"> 29th jan </span>
 <span style="color: Yellow"> 7:50 pm </span>
-<span style="color: Pink"> divyashree cr </span>
+<span style="color: Pink"> **VARSHINI HR** </span>
 <span style="color: black"> spektra systems </span>
 <span style="color: red"> first month of 2025 </span> 
  <inject key="AzureAdUserEmail" value="" />
