--- a/1.md
+++ b/1.md
@@ -955,4 +955,14 @@ https://www.google.com/
 
 check 26th nov
 Color Your Eye Test
+
+Enable Copy - True -----------------
+
+* **checkNNumber:** <inject key="AzureAdUserEmail" value="StaticValue2" key="AzureAdUserPassword" value="StaticValue1" 
+     enableClicktoPaste="true" />
+
+
+Enable Copy - False -----------------
+
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue4" key="AzureAdUserEmail" enableCopy="false" />
 vhr completed</br>
