--- a/1.md
+++ b/1.md
@@ -958,11 +958,12 @@ Color Your Eye Test
 
 Enable Copy - True -----------------
 
-* **checkNNumber:** <inject key="AzureAdUserEmail" value="StaticValue2" key="AzureAdUserPassword" value="StaticValue1" 
-     enableClicktoPaste="true" />
+1. On the **Sign in to Microsoft Azure** window, you will see the login screen, enter the following username and click on Next
+    * Email/Username1 : <inject key="AzureAdUserEmail"></inject>
 
+1. Now enter the following password and click on **Sign in**.   
 
-Enable Copy - False -----------------
-
-* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue4" key="AzureAdUserEmail" enableCopy="false" />
+   * Password : <inject key="AzureAdUserPassword"></inject>
+   
+       ![](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-portalsignin-2.png?raw=true)
 vhr completed</br>
