--- a/1.md
+++ b/1.md
@@ -719,17 +719,18 @@ Adding gif
 https://media1.tenor.com/m/OTtSnexFUcwAAAAC/junk-food-unhealthy.gif
 
 https://media1.tenor.com/m/waC6qhecVNAAAAAd/jack-in-the-box-fast-food.gif
------- Ankush Changes -----------
+
+------ Ankush Changes on 15-12-2025--- -----------
 <span style="color: green"> tuesday </span>
 <span style="color: Blue"> 29th jan </span>
 <span style="color: Yellow"> 7:50 pm </span>
 <span style="color: Pink"> divyashree cr </span>
 <span style="color: black"> spektra systems </span>
 <span style="color: red"> first month of 2025 </span>
-No key and No Value
+**No key and No Value**
 Invalid Key with no Value any value
 <inject key="" defaultvalue="">
-Adding gif
+**Adding gif**
 https://media1.tenor.com/m/OTtSnexFUcwAAAAC/junk-food-unhealthy.gif
 
 ![image](https://github.com/user-attachments/assets/4b7c5ae1-c4eb-4442-bdc0-3a2ffad3aa7a)
