--- a/1.md
+++ b/1.md
@@ -1062,3 +1062,6 @@ vhr completed</br>
 Reflect the changes
 <inject key=" " defaultvalue="Reflect the changes">
 <inject key="AzureAdUserPassword"></inject>
+<span style="color: green"> tuesday </span>
+<span style="color: Blue"> 29th jan </span>
+<span style="color: Yellow"> 7:50 pm </span>
