--- a/1.md
+++ b/1.md
@@ -1058,10 +1058,10 @@ Enable Copy - True -----------------
     
 vhr completed</br>
 
-<inject key=" " defaultvalue="count">
+* Default name <inject key=" " defaultvalue="count">
 Reflect the changes
 
-<inject key="AzureAdUserPassword"></inject>
+* Password <inject key="AzureAdUserPassword"></inject>
 <span style="color: green"> tuesday </span>
 <span style="color: Blue"> 29th jan </span>
 <span style="color: Yellow"> 7:50 pm </span>
