--- a/1.md
+++ b/1.md
@@ -470,12 +470,11 @@ https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2
 
 
 ````
-anupam don't copy me - https://www.youtube.com/watch?v=5abffC-K40c https://www.google.com/url?sa=i&url=
+ - https://www.youtube.com/watch?v=5abffC-K40c https://www.google.com/url?sa=i&url=
 ```
 
 
 ````
-anupam don't copy me
 
 
 *italic*
@@ -1058,12 +1057,10 @@ Enable Copy - True -----------------
     
 vhr completed</br>
 
-* Default name <inject key=" " defaultvalue="count">
-Reflect the changes
-```
-* Password <inject key="AzureAdUserPassword"></inject>
+* Default name </inject key=" " defaultvalue="count">
+Reflect the change
+* Password </inject key="AzureAdUserPassword"></inject>
 
-```
 <span style="color: green"> tuesday </span>
 <span style="color: Blue"> 29th jan </span>
 <span style="color: Yellow"> 7:50 pm </span>
