--- a/1.md
+++ b/1.md
@@ -1057,9 +1057,9 @@ Enable Copy - True -----------------
     
 vhr completed</br>
 
-* Default name </inject key=" " defaultvalue="count">
+* Default name <inject key=" " defaultvalue="count">
 Reflect the change
-* Password </inject key="AzureAdUserPassword"></inject>
+* Password <inject key="AzureAdUserPassword">
 
 <span style="color: green"> tuesday </span>
 <span style="color: Blue"> 29th jan </span>
