--- a/2.md
+++ b/2.md
@@ -61,3 +61,14 @@ _ Italic_</br>
 
 > [!CAUTION]
 > Advises about risks or negative outcomes of certain actions.
+
+07 Jan 2026 - MP And SSS
+
+<pre>
+  Pre Test for Paragraph. Copy <inject key="AzureAdUserPassword" style="color: Red"></inject>
+</pre>
+
+<pre>
+     Code block test
+</pre>
+
