--- a/1.md
+++ b/1.md
@@ -1096,9 +1096,13 @@ SVG
 ```
 code bock ckeck-VHR
 ```
-
+** PRE Tag Scenarios**
 <pre>
 Line 1
     Line 2 (indented)
 Line 3
 </pre>
+
+<pre>This is a standard pre. It will use as much space as it needs.</pre>
+<div style="width:200px;overflow:auto">
+<pre>This is a pre with a fixed width. It will use as much space as specified.</pre>
