--- a/2.md
+++ b/2.md
@@ -69,6 +69,9 @@ _ Italic_</br>
 </pre>
 
 <pre>
-     Code block test
+     Code block test with Tab key
 </pre>
 
+<pre>
+Code block test without any space/Tab
+</pre>
