--- a/1.md
+++ b/1.md
@@ -1106,3 +1106,4 @@ Line 3
 <pre>This is a standard pre. It will use as much space as it needs.</pre>
 <div style="width:200px;overflow:auto">
 <pre>This is a pre with a fixed width. It will use as much space as specified.</pre>
+</div>
