--- a/1.md
+++ b/1.md
@@ -1107,3 +1107,14 @@ Line 3
 <div style="width:200px;overflow:auto">
 <pre>This is a pre with a fixed width. It will use as much space as specified.</pre>
 </div>
+'''
+one 
+two
+three
+'''
+<pre>
+     This is preformatted text.
+It preserves spaces,
+   indentation,
+and line breaks.
+</pre>
