--- a/1.md
+++ b/1.md
@@ -1118,3 +1118,18 @@ It preserves spaces,
    indentation,
 and line breaks.
 </pre>
+
+
+**07 Jan 2026 - MP And SSS**
+
+<pre>
+  Pre Test for Paragraph. Copy <inject key="AzureAdUserPassword" style="color: Red"></inject>
+</pre>
+
+<pre>
+     Code block test with Tab key
+</pre>
+
+<pre>
+Code block test without any space/Tab
+</pre>
