--- a/1.md
+++ b/1.md
@@ -1133,3 +1133,14 @@ and line breaks.
 <pre>
 Code block test without any space/Tab
 </pre>
+
+
+<h3>
+PRE TAG Testing
+Not Claimed
+Quota available for each user includes the lab quota and the user quota.
+
+
+ Pre Test for Paragraph. Copy <inject key="AzureAdUserPassword" style="color: Blue"></inject>
+     
+</h3>
