--- a/1.md
+++ b/1.md
@@ -1144,3 +1144,10 @@ Quota available for each user includes the lab quota and the user quota.
  Pre Test for Paragraph. Copy <inject key="AzureAdUserPassword" style="color: Blue"></inject>
      
 </h3>
+
+<pre>
+Code block test without any space/Tab
+Quota available for each user
+Quota available for each user
+Quota available for each user
+</pre>
