--- a/1.md
+++ b/1.md
@@ -1136,12 +1136,7 @@ Code block test without any space/Tab
 
 
 <h3>
-PRE TAG Testing
-Not Claimed
-Quota available for each user includes the lab quota and the user quota.
-
-
- Pre Test for Paragraph. Copy <inject key="AzureAdUserPassword" style="color: Blue"></inject>
+ Pre Test for Paragraph. <inject key="AzureAdUserPassword" style="color: Blue"></inject>
      
 </h3>
 
