--- a/1.md
+++ b/1.md
@@ -1136,8 +1136,9 @@ Code block test without any space/Tab
 
 
 <h3>
- Pre Test for Paragraph. <inject key="AzureAdUserPassword" style="color: Blue"></inject>
-     
+ <Pre> 
+      Test for Paragraph. <inject key="AzureAdUserPassword" style="color: Blue"></inject>
+ </Pre>Pre> 
 </h3>
 
 <pre>
