--- a/1.md
+++ b/1.md
@@ -1137,8 +1137,8 @@ Code block test without any space/Tab
 
 <h3>
  <Pre> 
-      Test for Paragraph. <inject key="AzureAdUserPassword" style="color: Blue"></inject>
- </Pre>Pre> 
+     QA <inject key="AzureAdUserPassword" style="color: Blue"></inject>
+ </Pre>
 </h3>
 
 <pre>
