--- a/1.md
+++ b/1.md
@@ -1096,7 +1096,7 @@ SVG
 ```
 code bock ckeck-VHR
 ```
-** PRE Tag Scenarios**
+**PCS PRE Tag Scenarios**
 <pre>
 Line 1
     Line 2 (indented)
@@ -1107,11 +1107,7 @@ Line 3
 <div style="width:200px;overflow:auto">
 <pre>This is a pre with a fixed width. It will use as much space as specified.</pre>
 </div>
-'''
-one 
-two
-three
-'''
+
 <pre>
      This is preformatted text.
 It preserves spaces,
@@ -1119,6 +1115,15 @@ It preserves spaces,
 and line breaks.
 </pre>
 
+<pre>
+    Long Paragraph without any break Long Paragraph without any break Long Paragraph without any break Long Paragraph without any break Long Paragraph without any break Long Paragraph without any break Long Paragraph without any break 
+</pre>
+
+<pre>
+     Long Paragraph with break and more            space
+     Long Paragraph with break and more                    tab
+     Long Paragraph with break and more            space
+</pre>
 
 **07 Jan 2026 - MP And SSS**
 
