--- a/1.md
+++ b/1.md
@@ -1125,6 +1125,14 @@ and line breaks.
      Long Paragraph with break and more            space
 </pre>
 
+<pre>
+            Hello World, 
+            this text is inside a pre tag, all white       spaces     are 
+
+
+        preserved
+</pre>
+
 **07 Jan 2026 - MP And SSS**
 
 <pre>
