--- a/1.md
+++ b/1.md
@@ -1122,6 +1122,7 @@ and line breaks.
 <pre>
      Long Paragraph with break and more            space
      Long Paragraph with break and more                    tab
+     <img src= "https://spektrasystems.com/wp-content/uploads/2021/02/IMG_5288-1024x683-2-600x600.jpg" width="300" height="300">
      Long Paragraph with break and more            space
 </pre>
 
