--- a/1.md
+++ b/1.md
@@ -1123,6 +1123,7 @@ and line breaks.
      Long Paragraph with break and more            space
      Long Paragraph with break and more                    tab
      <span style="color: green"> tuesday </span>
+      <inject key="AzureAdUserEmail" value="example@example.com" />
      Long Paragraph with break and more            space
 </pre>
 
