--- a/1.md
+++ b/1.md
@@ -1122,7 +1122,7 @@ and line breaks.
 <pre>
      Long Paragraph with break and more            space
      Long Paragraph with break and more                    tab
-     <span style="color: green"> tuesday </span>
+     <span style="color: RED"> tuesday </span>
       <inject key="AzureAdUserEmail" value="example@example.com" />
      Long Paragraph with break and more            space
 </pre>
