--- a/1.md
+++ b/1.md
@@ -1168,3 +1168,7 @@ Line 10000
     Line 2000000 (indented)
 Line 3000
 </pre>
+
+08 Jan 2026-vb pre tag
+<p>1.Invalid tag</p>
+<pre>Hello world pre
