--- a/1.md
+++ b/1.md
@@ -1171,4 +1171,7 @@ Line 3000
 
 08 Jan 2026-vb pre tag [pre means preformatted text]
 <p>1.Invalid tag</p>
-<preHello world pre
+<pre Hello world pre </br>
+----------------------------
+<p>2.monospace </p>
+<pre>monospace text check</pre>
