--- a/1.md
+++ b/1.md
@@ -1170,7 +1170,7 @@ Line 3000
 </pre>
 
 08 Jan 2026-vb pre tag [pre means preformatted text]
-**preserves both spaces and line breaks**
+ # **preserves both spaces and line breaks**
 <p>1.monospace </p>
 <pre>monospace text check</pre>
 <p>2.preformatted text with spaces and line breaks</p>
