--- a/1.md
+++ b/1.md
@@ -1169,13 +1169,13 @@ Line 10000
 Line 3000
 </pre>
 
-08 Jan 2026-vb pre tag [pre means preformatted text]
- # **preserves both spaces and line breaks**
+# 08 Jan 2026-vb pre tag [pre means preformatted text]
+**preserves both spaces and line breaks**
 <p>1.monospace </p>
 <pre>monospace text check</pre>
 <p>2.preformatted text with spaces and line breaks</p>
 <pre>
-Text in a pre element
+     \tText in a pre element
 is displayed in a fixed-width
 font, and it preserves
 both      spaces and
