--- a/1.md
+++ b/1.md
@@ -1171,13 +1171,17 @@ Line 3000
 
 # 08 Jan 2026-vb pre tag [pre means preformatted text]
 **preserves both spaces and line breaks**
-<p>1.monospace </p>
+<p>1.monospace-single space without line break</p>
 <pre>monospace text check</pre>
-<p>2.preformatted text with spaces and line breaks</p>
+<p>2.preformatted text with spaces and line breaks preservation</p>
 <pre>
      \tText in a pre element
 is displayed in a fixed-width
 font, and it preserves
 both      spaces and
 line breaks
+</pre>
+<p>3.preformatted text without spaces and withoutline breaks preservation</p>
+<pre>
+Textinapreelementisdisplayedinafixed-widthfon,anditpreserves
 </pre>
