--- a/1.md
+++ b/1.md
@@ -1183,5 +1183,13 @@ line breaks
 </pre>
 <p>3.preformatted text without spaces and withoutline breaks preservation</p>
 <pre>
-Textinapreelementisdisplayedinafixed-widthfon,anditpreserves
+Textinapreelementisdisplayedinafixed-widthfoanditpreserves
 </pre>
+<p>3.preformatted text with multiple lines</p>
+<pre>
+1st line
+2nd line
+3rd line
+4th line
+</pre>
+
