--- a/1.md
+++ b/1.md
@@ -1185,11 +1185,17 @@ line breaks
 <pre>
 Textinapreelementisdisplayedinafixed-widthfoanditpreserves
 </pre>
-<p>3.preformatted text with multiple lines</p>
+<p>4.preformatted text with multiple lines</p>
 <pre>
 1st line
 2nd line
 3rd line
 4th line
 </pre>
+<p>5.Inline HTML Inside</p>
+<pre>
+Hello <span style="color:red">World</span>
+</pre>
+
+
 
