--- a/1.md
+++ b/1.md
@@ -1196,6 +1196,10 @@ Textinapreelementisdisplayedinafixed-widthfoanditpreserves
 <pre>
 Hello <span style="color:red">World</span>
 </pre>
+<pre style="color:red">
+World
+</pre>
+
 
 
 
