--- a/1.md
+++ b/1.md
@@ -1196,8 +1196,8 @@ Textinapreelementisdisplayedinafixed-widthfoanditpreserves
 <pre>
 Hello <span style="color:red">World</span>
 </pre>
-<pre style="color:red">
-World
+<pre style="color:yellow">
+World 🟡
 </pre>
 
 
