--- a/1.md
+++ b/1.md
@@ -1199,7 +1199,10 @@ Hello <span style="color:red">World</span>
 <pre style="color:yellow">
 World 🟡 yellowww
 </pre>
-
+<p>6.Adding emojis</p>
+<pre>
+World 🟡 yellowww
+</pre>
 
 
 
