--- a/1.md
+++ b/1.md
@@ -1200,9 +1200,13 @@ Hello <span style="color:red">World</span>
 World 🟡 yellowww
 </pre>
 <p>6.Adding emojis</p>
-<pre>
-World 🟡 yellowww
-</pre>
+<pre>💜 purple/lavender</pre>
+<p>7.Scrolling</p>
+<div style="width:200px;overflow:auto">
+  <pre>This is a very long line that should trigger horizontal scrolling.</pre>
+</div>
+
+
 
 
 
