--- a/1.md
+++ b/1.md
@@ -1202,8 +1202,11 @@ World 🟡 yellowww
 <p>6.Adding emojis</p>
 <pre>💜 purple/lavender</pre>
 <p>7.Scrolling</p>
-<div style="width:500px;overflow:auto">
-  <pre>This is a very long line that should trigger horizontal scrolling.</pre>
+<div style="width:800px;overflow:auto">
+  <pre>This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.</pre>
+</div>
+<div style="width:300px;overflow:auto">
+  <pre>This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.</pre>
 </div>
 
 
