--- a/1.md
+++ b/1.md
@@ -1208,7 +1208,9 @@ World 🟡 yellowww
 <div style="width:500px;overflow:auto">
   <pre>This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.</pre>
 </div>
-
+<div style="width:150px;overflow:auto">
+  <pre>This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.</pre>
+</div
 
 
 
