--- a/1.md
+++ b/1.md
@@ -1209,7 +1209,7 @@ World 🟡 yellowww
   <pre>This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.</pre>
 </div>
 <div style="width:150px;overflow:auto">
-  <pre>This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.</pre>
+  <pre>This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.</pre>
 </div
 
 
