--- a/1.md
+++ b/1.md
@@ -1210,7 +1210,10 @@ World 🟡 yellowww
 </div>
 <div style="width:150px;overflow:auto">
   <pre>This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.</pre>
-</div
+</div>
+<div style="width:200px;overflow:auto">
+  <pre>This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.</pre>
+</div>
 
 
 
