--- a/1.md
+++ b/1.md
@@ -1200,7 +1200,7 @@ Hello <span style="color:red">World</span>
 World 🟡 yellowww
 </pre>
 <p>6.Adding emojis</p>
-<pre>💜 purple/lavender</pre>
+<pre>💜🟣🍇🟪purple/lavender</pre>
 <p>7.Scrolling</p>
 <div style="width:800px;overflow:auto">
   <pre>This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.</pre>
