--- a/1.md
+++ b/1.md
@@ -1214,7 +1214,16 @@ World 🟡 yellowww
 <div style="width:200px;overflow:auto">
   <pre>This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.This is a very long line that should trigger horizontal scrolling.</pre>
 </div>
-
+<p>8.long paragrah without line break</p>
+<pre>
+Long text without breaks Long text without breaks Long text without breaks Long text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Long text without breaks
+</pre>
+<p>9.long paragrah with line break</p>
+<pre>
+Long text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Lo
+Long text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Lo
+Long text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Lo
+</pre>
 
 
 
