--- a/1.md
+++ b/1.md
@@ -1224,6 +1224,10 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 Long text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Lo
 Long text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Lo
 </pre>
+<p>10.inject keys in pre tag</p>
+<pre>
+User Email: <inject key="AzureAdUserEmail" value="example@abcdefgh.com" />
+</pre>
 
 
 
