--- a/1.md
+++ b/1.md
@@ -1226,7 +1226,7 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 </pre>
 <p>10.inject keys in pre tag</p>
 <pre>
-User Email: <inject key="AzureAdUserEmail" value="example@fhhj.com" />
+Password:<inject key="AzureAdUserPassword" value="1234"/>
 </pre>
 
 
