--- a/1.md
+++ b/1.md
@@ -1171,7 +1171,6 @@ Line 3000
 
 # 08 Jan 2026-vb pre tag [pre means preformatted text]
 **preserves both spaces and line breaks**
-
 <p>2.preformatted text with spaces and line breaks preservation</p>
 <pre>
      \tText in a pre element
@@ -1225,6 +1224,11 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 </pre>
 <p>10.monospace-single space without line break</p>
 <pre>monospace text check</pre>
+
+<p>1.inject keys in pre tag</p>
+<pre>
+Password:<inject key="AzureAdUserPassword" value="1234"/>
+</pre>
 
 
 
