--- a/1.md
+++ b/1.md
@@ -1224,8 +1224,8 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 </pre>
 <p>10.monospace-single space without line break</p>
 <pre>monospace text check</pre>
-
-<p>1.inject keys in pre tag</p>
+<p>11.nested pretags</p>
+<pre><pre>Nested text pre tag within pre tag</pre></pre>
 <pre>
 Password:<inject key="AzureAdUserPassword" value="1234"/>
 </pre>
