--- a/1.md
+++ b/1.md
@@ -1225,7 +1225,10 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 <p>10.monospace-single space without line break</p>
 <pre>monospace text check</pre>
 <p>11.nested pretags</p>
-<pre><pre>Nested text pre tag within pre tag</pre></pre>
+<pre><pre>Nested text pre tag within pre tag</pre>
+     <pre>Nested text pre tag within pre tag</pre>
+     <pre>Nested text pre tag within pre tag</pre>
+</pre>
 <pre>
 Password:<inject key="AzureAdUserPassword" value="1234"/>
 </pre>
