--- a/1.md
+++ b/1.md
@@ -1224,6 +1224,9 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 </pre>
 <p>10.monospace-single space without line break</p>
 <pre>monospace text check</pre>
-
+<p>11.nested pretags</p>
+<pre><pre>Nested pre tags</pre>
+     <pre><pre>Nested pre</pre></pre>
+</pre>
 
 
