--- a/1.md
+++ b/1.md
@@ -1226,7 +1226,10 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 <pre>monospace text check</pre>
 <p>11.nested pretags</p>
 <pre><pre>Nested pre tags</pre>
-     <pre><pre>Nested pre</pre></pre>
+     <pre>
+          <pre>Nested pre</pre>
+     </pre>
+     <pre>Nested pre blablabla</pre>
 </pre>
 
 
