--- a/1.md
+++ b/1.md
@@ -1231,5 +1231,8 @@ Long text without breaks Long text without breaks Long text without breaksLong t
      </pre>
      <pre>Nested pre blablabla</pre>
 </pre>
-
+<p>12.Inject keys</p>
+<Pre> 
+     password:<inject key="AzureAdUserPassword" style="color: Blue"></inject>
+ </Pre>
 
