--- a/1.md
+++ b/1.md
@@ -1233,6 +1233,6 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 </pre>
 <p>12.Inject keys</p>
 <Pre> 
-     password:<inject key="AzureAdUserPassword" style="color: Blue"></inject>
+     password:<inject key="AzureAdUserPassword" Value="1234"></inject>
  </Pre>
 
