--- a/1.md
+++ b/1.md
@@ -1171,6 +1171,8 @@ Line 3000
 
 # 08 Jan 2026-vb pre tag [pre means preformatted text]
 **preserves both spaces and line breaks**
+<p>1.monospace-single space without line break</p>
+<pre>monospace text check</pre>
 <p>2.preformatted text with spaces and line breaks preservation</p>
 <pre>
      \tText in a pre element
@@ -1222,14 +1224,14 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 Long text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Lo
 Long text without breaks Long text without breaks Long text without breaksLong text without breaks Long text without breaks Lo
 </pre>
-<p>10.monospace-single space without line break</p>
-<pre>monospace text check</pre>
-<p>11.nested pretags</p>
+<p>10.nested pretags</p>
 <pre><pre>Nested pre tags</pre>
      <pre>
           <pre>Nested pre</pre>
      </pre>
      <pre>Nested pre blablabla</pre>
 </pre>
+<p>11.Invalid pre tag without closing tag</p>
+<pre>Hello worlds data
 
 
