--- a/1.md
+++ b/1.md
@@ -1232,9 +1232,13 @@ Long text without breaks Long text without breaks Long text without breaksLong t
      <pre>Nested pre blablabla</pre>
 </pre>
 <p>11.Invalid pre tag without closing tag</p>
-<pre>Hello worlds data
 
 # 10 Jan 2026-SM pre tag
 <pre>
 Hello New Year 2026
+</pre>
+<pre>
+Line 1
+    Line 2 with spaces
+Line 3
 </pre>
